RESOLVED FIXED56370
[GStreamer] http/tests/media/video-play-stall-before-meta-data.html fails
https://bugs.webkit.org/show_bug.cgi?id=56370
Summary [GStreamer] http/tests/media/video-play-stall-before-meta-data.html fails
Philippe Normand
Reported 2011-03-15 03:28:15 PDT
Diff: --- /home/slave/webkitgtk/gtk-linux-64-debug/build/layout-test-results/http/tests/media/video-play-stall-before-meta-data-expected.txt 2011-03-15 03:05:36.457251353 -0700 +++ /home/slave/webkitgtk/gtk-linux-64-debug/build/layout-test-results/http/tests/media/video-play-stall-before-meta-data-actual.txt 2011-03-15 03:05:36.457251353 -0700 @@ -2,7 +2,6 @@ EVENT(beforeload) EVENT(loadstart) -EVENT(stalled) EVENT(window.onload) END OF TEST I think the test fails because our player errors out and resets its network state too early, preventing HTMLMediaElement::progressEventTimerFired to emit the stalled event. I'll skip the test on GTK for now and work on a fix for this issue.
Attachments
proposed patch (3.53 KB, patch)
2011-03-15 04:54 PDT, Philippe Normand
eric.carlson: review+
Philippe Normand
Comment 1 2011-03-15 03:38:00 PDT
Philippe Normand
Comment 2 2011-03-15 04:54:34 PDT
Created attachment 85796 [details] proposed patch
Philippe Normand
Comment 3 2011-03-16 01:57:28 PDT
Joseph Pecoraro
Comment 4 2011-03-16 10:25:31 PDT
Thanks for fixing this Philippe. I didn't even notice it failed on gtk.
Note You need to log in before you can comment on or make changes to this bug.